added skill content

--- a/index.html
+++ b/index.html
@@ -63,6 +63,41 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <P class="skill-title">Vanila JavaScript</P>
+                    <p class="skill description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+                        blanditiis quidem ullam quisquam ut vitae.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <P class="skill-title">React</P>
+                    <p class="skill description">Quia atque nesciunt ab exercitationem natus ducimus neque assumenda
+                        libero necessitatibus ex consequuntur, tenetur sequi!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <P class="skill-title">Mongodb</P>
+                    <p class="skill description">Exercitationem, et vel! Facere ea fuga aliquam! Quod illo quas nulla
+                        porro sequi cumque corrupti?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <P class="skill-title">Node Js</P>
+                    <p class="skill description">Vitae molestiae blanditiis, voluptas ipsam deserunt ipsa? Nulla
+                        doloremque asperiores, molestiae et numquam hic reprehenderit?</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+        </section>
     </main>
     <footer>
 
